--- a/ios/LeoShareExtension/Info.plist
+++ b/ios/LeoShareExtension/Info.plist
@@ -25,16 +25,27 @@
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>NSExtensionActivationRule</key>
-			<dict>
-					<key>NSExtensionActivationSupportsText</key>
-					<true/>
-					<key>NSExtensionActivationSupportsWebPageWithMaxCount</key>
-					<integer>1</integer>
-					<key>NSExtensionActivationSupportsTextWithMaxCount</key>
-					<integer>1</integer>
-					<key>NSExtensionActivationSupportsWebURLWithMaxCount</key>
-					<integer>1</integer>
-			</dict>
+			<string>SUBQUERY (
+                extensionItems,
+                $extensionItem,
+                SUBQUERY (
+                    $extensionItem.attachments,
+                    $attachment,
+                    (
+                        ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.text"
+                        || ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "com.adobe.pdf"
+                        || ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.image"
+                        || ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.presentation"
+                        || ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.composite-content"
+                        || ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.audio"
+                        || ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.movie"
+                        || ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.url"
+                        || ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.data"
+                    )
+
+                ).@count == $extensionItem.attachments.@count
+            ).@count == 1
+            </string>
 		</dict>
 		<key>NSExtensionMainStoryboard</key>
 		<string>MainInterface</string>
