--- a/demo/pubspec.yaml
+++ b/demo/pubspec.yaml
@@ -1,4 +1,4 @@
-name: leo_app
+name: demo
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -23,9 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.12.2
-  shared_preferences: ^0.5.6+1
-  flutter_dotenv: ^2.1.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -47,9 +45,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - images/leo_icon.png
-    - .env
+  # assets:
+  #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
