--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   http: ^0.12.2
   shared_preferences: ^0.5.6+1
   flutter_dotenv: ^2.1.0
+  url_launcher: ^5.7.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
