--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/leo_icon.png
+    - images/leo_icon_header.png
     - .env
   #   - images/a_dot_ham.jpeg
 
